--- a/tables/slippage.tex
+++ b/tables/slippage.tex
@@ -1,67 +1,74 @@
 \begin{tabular}{lllrrrrr}
 \toprule
-     &        &       &  Binance &  CoinEx &  Huobi &  OKX &  Uniswap \\
-risk asset & trade size (\$) & long risk &          &         &        &      &          \\
+    &       &        &  Binance &  CoinEx &  Huobi &   OKX &  Uniswap \\
+risk asset & long risk & trade size (\$) &          &         &        &       &          \\
 \midrule
-\multirow{3}{*}{UNI} & 100 & True  &     0.01 &    0.81 &   0.06 & 0.02 &    10.37 \\
-     & 10,000 & True  &     0.05 &     --- &   0.19 & 0.04 &     0.54 \\
-     & 1,000,000 & True  &     4.06 &     --- &    --- &  --- &     2.16 \\
+\multirow{6}{*}{ETH} & \multirow{3}{*}{True} & 100 &    0.000 &   0.005 &  0.001 & 0.000 &   12.658 \\
+    &       & 10,000 &    0.001 &   0.024 &  0.003 & 0.002 &    0.244 \\
+    &       & 1,000,000 &    0.049 &     --- &  0.153 & 0.066 &    0.259 \\
+\cline{2-8}
+    & \multirow{3}{*}{False} & 100 &    0.000 &   0.005 &  0.001 & 0.000 &   14.515 \\
+    &       & 10,000 &    0.001 &   0.018 &  0.004 & 0.002 &    0.244 \\
+    &       & 1,000,000 &    0.045 &     --- &  0.250 & 0.059 &    0.337 \\
 \cline{1-8}
-\multirow{3}{*}{SNX} & 100 & True  &     0.03 &    0.60 &   0.26 & 0.04 &    13.38 \\
-     & 10,000 & True  &     0.07 &     --- &   1.08 & 0.12 &     0.70 \\
-     & 1,000,000 & True  &      --- &     --- &    --- &  --- &    40.63 \\
+\cline{2-8}
+\multirow{6}{*}{BTC} & \multirow{3}{*}{True} & 100 &    0.000 &   0.002 &  0.000 & 0.000 &    8.869 \\
+    &       & 10,000 &    0.000 &   0.007 &  0.001 & 0.001 &    0.295 \\
+    &       & 1,000,000 &    0.021 &     --- &  0.079 & 0.039 &    0.281 \\
+\cline{2-8}
+    & \multirow{3}{*}{False} & 100 &    0.000 &   0.002 &  0.000 & 0.000 &    8.061 \\
+    &       & 10,000 &    0.000 &   0.006 &  0.001 & 0.001 &    0.281 \\
+    &       & 1,000,000 &    0.022 &     --- &  0.120 & 0.038 &    0.456 \\
 \cline{1-8}
-\multirow{3}{*}{MKR} & 100 & True  &     0.04 &    0.15 &   0.11 & 0.02 &    10.92 \\
-     & 10,000 & True  &     0.05 &    0.46 &   0.17 & 0.11 &     0.42 \\
-     & 1,000,000 & True  &     2.88 &     --- &    --- &  --- &     1.79 \\
+\cline{2-8}
+\multirow{6}{*}{LINK} & \multirow{3}{*}{True} & 100 &    0.007 &   0.179 &  0.027 & 0.013 &   10.363 \\
+    &       & 10,000 &    0.027 &   0.452 &  0.070 & 0.049 &    0.520 \\
+    &       & 1,000,000 &    0.698 &     --- &    --- & 2.200 &    0.647 \\
+\cline{2-8}
+    & \multirow{3}{*}{False} & 100 &    0.006 &   0.167 &  0.027 & 0.012 &   11.825 \\
+    &       & 10,000 &    0.027 &   0.410 &  0.072 & 0.049 &    0.520 \\
+    &       & 1,000,000 &    0.644 &     --- &    --- &   --- &    0.649 \\
 \cline{1-8}
-\multirow{3}{*}{LINK} & 100 & True  &     0.01 &    0.18 &   0.03 & 0.01 &    10.36 \\
-     & 10,000 & True  &     0.03 &    0.45 &   0.07 & 0.05 &     0.52 \\
-     & 1,000,000 & True  &     0.70 &     --- &    --- & 2.20 &     0.65 \\
+\cline{2-8}
+\multirow{6}{*}{UNI} & \multirow{3}{*}{True} & 100 &    0.014 &   0.806 &  0.060 & 0.017 &   10.368 \\
+    &       & 10,000 &    0.049 &     --- &  0.186 & 0.044 &    0.536 \\
+    &       & 1,000,000 &    4.059 &     --- &    --- &   --- &    2.161 \\
+\cline{2-8}
+    & \multirow{3}{*}{False} & 100 &    0.015 &   0.423 &  0.056 & 0.016 &   11.838 \\
+    &       & 10,000 &    0.046 &     --- &  0.142 & 0.046 &    0.536 \\
+    &       & 1,000,000 &    4.539 &     --- &    --- &   --- &    2.420 \\
 \cline{1-8}
-\multirow{3}{*}{ETH} & 100 & True  &     0.00 &    0.01 &   0.00 & 0.00 &    12.66 \\
-     & 10,000 & True  &     0.00 &    0.02 &   0.00 & 0.00 &     0.24 \\
-     & 1,000,000 & True  &     0.05 &     --- &   0.15 & 0.07 &     0.26 \\
+\cline{2-8}
+\multirow{5}{*}{AAVE} & \multirow{3}{*}{True} & 100 &    0.008 &   0.194 &  0.071 & 0.011 &   14.270 \\
+    &       & 10,000 &    0.047 &   2.581 &  0.158 & 0.058 &    0.882 \\
+    &       & 1,000,000 &    3.620 &     --- &    --- &   --- &   63.986 \\
+\cline{2-8}
+    & \multirow{2}{*}{False} & 100 &    0.007 &   0.173 &  0.067 & 0.010 &   12.166 \\
+    &       & 10,000 &    0.072 &   1.794 &  0.133 & 0.048 &    0.882 \\
 \cline{1-8}
-\multirow{3}{*}{CRV} & 100 & True  &     0.01 &    0.31 &   0.10 & 0.02 &    12.06 \\
-     & 10,000 & True  &     0.08 &     --- &   0.28 & 0.08 &     0.63 \\
-     & 1,000,000 & True  &      --- &     --- &    --- &  --- &    16.39 \\
+\cline{2-8}
+\multirow{5}{*}{CRV} & \multirow{3}{*}{True} & 100 &    0.014 &   0.309 &  0.097 & 0.016 &   12.057 \\
+    &       & 10,000 &    0.078 &     --- &  0.280 & 0.080 &    0.630 \\
+    &       & 1,000,000 &      --- &     --- &    --- &   --- &   16.392 \\
+\cline{2-8}
+    & \multirow{2}{*}{False} & 100 &    0.017 &   0.266 &  0.099 & 0.017 &   12.644 \\
+    &       & 10,000 &    0.100 &   1.108 &  0.304 & 0.103 &    0.630 \\
 \cline{1-8}
-\multirow{3}{*}{BTC} & 100 & True  &     0.00 &    0.00 &   0.00 & 0.00 &     8.87 \\
-     & 10,000 & True  &     0.00 &    0.01 &   0.00 & 0.00 &     0.29 \\
-     & 1,000,000 & True  &     0.02 &     --- &   0.08 & 0.04 &     0.28 \\
+\cline{2-8}
+\multirow{6}{*}{MKR} & \multirow{3}{*}{True} & 100 &    0.036 &   0.152 &  0.115 & 0.022 &   10.920 \\
+    &       & 10,000 &    0.049 &   0.457 &  0.172 & 0.113 &    0.421 \\
+    &       & 1,000,000 &    2.883 &     --- &    --- &   --- &    1.792 \\
+\cline{2-8}
+    & \multirow{3}{*}{False} & 100 &    0.036 &   0.150 &  0.118 & 0.023 &   11.268 \\
+    &       & 10,000 &    0.065 &   0.314 &  0.196 & 0.093 &    0.421 \\
+    &       & 1,000,000 &    2.617 &     --- &    --- &   --- &    1.670 \\
 \cline{1-8}
-\multirow{3}{*}{AAVE} & 100 & True  &     0.01 &    0.19 &   0.07 & 0.01 &    14.27 \\
-     & 10,000 & True  &     0.05 &    2.58 &   0.16 & 0.06 &     0.88 \\
-     & 1,000,000 & True  &     3.62 &     --- &    --- &  --- &    63.99 \\
-\cline{1-8}
-\multirow{3}{*}{UNI} & 100 & False &     0.01 &    0.42 &   0.06 & 0.02 &    11.84 \\
-     & 10,000 & False &     0.05 &     --- &   0.14 & 0.05 &     0.54 \\
-     & 1,000,000 & False &     4.54 &     --- &    --- &  --- &     2.42 \\
-\cline{1-8}
-\multirow{2}{*}{SNX} & 100 & False &     0.03 &    0.57 &   0.36 & 0.04 &    12.08 \\
-     & 10,000 & False &     0.07 &    5.87 &   1.37 & 0.14 &     0.70 \\
-\cline{1-8}
-\multirow{3}{*}{MKR} & 100 & False &     0.04 &    0.15 &   0.12 & 0.02 &    11.27 \\
-     & 10,000 & False &     0.06 &    0.31 &   0.20 & 0.09 &     0.42 \\
-     & 1,000,000 & False &     2.62 &     --- &    --- &  --- &     1.67 \\
-\cline{1-8}
-\multirow{3}{*}{LINK} & 100 & False &     0.01 &    0.17 &   0.03 & 0.01 &    11.83 \\
-     & 10,000 & False &     0.03 &    0.41 &   0.07 & 0.05 &     0.52 \\
-     & 1,000,000 & False &     0.64 &     --- &    --- &  --- &     0.65 \\
-\cline{1-8}
-\multirow{3}{*}{ETH} & 100 & False &     0.00 &    0.00 &   0.00 & 0.00 &    14.51 \\
-     & 10,000 & False &     0.00 &    0.02 &   0.00 & 0.00 &     0.24 \\
-     & 1,000,000 & False &     0.04 &     --- &   0.25 & 0.06 &     0.34 \\
-\cline{1-8}
-\multirow{2}{*}{CRV} & 100 & False &     0.02 &    0.27 &   0.10 & 0.02 &    12.64 \\
-     & 10,000 & False &     0.10 &    1.11 &   0.30 & 0.10 &     0.63 \\
-\cline{1-8}
-\multirow{3}{*}{BTC} & 100 & False &     0.00 &    0.00 &   0.00 & 0.00 &     8.06 \\
-     & 10,000 & False &     0.00 &    0.01 &   0.00 & 0.00 &     0.28 \\
-     & 1,000,000 & False &     0.02 &     --- &   0.12 & 0.04 &     0.46 \\
-\cline{1-8}
-\multirow{2}{*}{AAVE} & 100 & False &     0.01 &    0.17 &   0.07 & 0.01 &    12.17 \\
-     & 10,000 & False &     0.07 &    1.79 &   0.13 & 0.05 &     0.88 \\
+\cline{2-8}
+\multirow{5}{*}{SNX} & \multirow{3}{*}{True} & 100 &    0.030 &   0.605 &  0.258 & 0.043 &   13.377 \\
+    &       & 10,000 &    0.074 &     --- &  1.080 & 0.125 &    0.700 \\
+    &       & 1,000,000 &      --- &     --- &    --- &   --- &   40.626 \\
+\cline{2-8}
+    & \multirow{2}{*}{False} & 100 &    0.031 &   0.573 &  0.358 & 0.045 &   12.078 \\
+    &       & 10,000 &    0.074 &   5.874 &  1.367 & 0.141 &    0.700 \\
 \bottomrule
 \end{tabular}
